Increasing gap a little bit on xs screens to prevent 3rd column from showing slightly.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -106,7 +106,7 @@ button.bg-primary-darkest:disabled {
 
 @media screen and (max-width: 639px) {
   .rkk-board {
-    gap: 2px !important;
+    gap: 4px !important;
   }
   .rkk-column-outer {
     min-width: 0 !important;
